# txtfp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md  USAGE.md  deny.toml  rust-toolchain.toml  rustfmt.toml  txt.md
.github/workflows/: audit.yml  ci.yml  coverage.yml
benches/: canonical.rs  lsh.rs  minhash.rs  simhash.rs
examples/: dedup.rs  near_dup.rs  regen_goldens.rs  semantic.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: canonicalize.rs  minhash_streaming.rs
src/: error.rs  fingerprint.rs  lib.rs  pdf.rs
src/canonical/: bidi.rs  casefold.rs  confusable.rs  mod.rs  normalize.rs
src/classical/: hash.rs  mod.rs  tlsh.rs
src/classical/lsh/: builder.rs  index.rs  mod.rs
src/classical/minhash/: fingerprinter.rs  jaccard.rs  mod.rs  sig.rs  streaming.rs
src/classical/simhash/: distance.rs  fingerprinter.rs  mod.rs  sig.rs  streaming.rs
src/markup/: html.rs  markdown.rs  mod.rs
src/semantic/: chunk.rs  embedding.rs  local.rs  mod.rs  pooling.rs  provider.rs
src/semantic/providers/: cohere.rs  mod.rs  openai.rs  retry.rs  voyage.rs
src/tokenize/: cjk.rs  grapheme.rs  mod.rs  shingle.rs  word.rs
tests/: adversarial.rs  golden_canonical.rs  golden_minhash.rs  golden_simhash.rs  i18n.rs  live_semantic.rs  lsh.rs  property_canonical.rs  property_minhash.rs  property_simhash.rs  tlsh.rs
tests/data/corpora/: arabic_rtl.txt  chinese_classical.txt  emoji_zwj.txt  lorem_ipsum.txt  markdown_post.md  mixed_script.txt
tests/data/golden/canonical/: chinese_classical.txt  emoji_zwj.txt  lorem_ipsum.txt  markdown_post.txt  mixed_script.txt
